@@ -3,7 +3,7 @@ AUX palaver-initd 651 SHA256 6cee305fc9d97c7ef3929a6202201b237eaee7c8cf9d8306a88
 AUX palaver.conf 116 SHA256 4c532034298f197a7810463d9f0a850e8118b96f50efd850f65097c017622d9f SHA512 f34536040a13bce8e419559b59058d930ae851917fedb150b3c9c4315f7946be9ca56af28841fa86ee1b3252b98eadcb01d3bb87a73e77917d59646fbb6871f2 WHIRLPOOL 26a61f877c6dbf6dc08f39dc0164c1672a4b050073ecb99b3b331ff7152fee4ff198ec4faf829018870a2022ebcf8e03eed9b1b8a02d47d032284741978d0c33
 AUX palaver_plugin.py 1222 SHA256 f9e81c27fb210799739ed36964b203a3ebde15584f9499d965db20e63eeeddf0 SHA512 5957e52274f38d82f3c897b24b8588eeb6a93eb9a04c2a421e9f95eab1a451da4bf1b944f19914163c9e925eaf37fb9fe6b332866859c22df40216d447a505ce WHIRLPOOL 9cf4778eaf45c556456c79764bc630d268fd0e2dbcb189d4af88b5664aeae0b3e91ee0af98e9666c9b160e454456fc7781e0bacd33dd7dcc0f40ff4d6d1ad427
 DIST palaver-0.6.tar.gz 118665 SHA256 0bcb8ff9834b8db905fa2c1a06f84a50bc9a459a326c6d67a10ac7a08f841e7a SHA512 adb1417802c845762ce4ed476cae0695fb21c22fc2454913ea103ee54f71c71da18186f92da3ce3cb05734c3f8ad58df0964b30f6c8984239cf365bfaeed84ec WHIRLPOOL b2848d97ee1861ecc07446ef2f83ae73063edf105706b8126575926b2820ca958e9901fd2d67c8c38577fdd489d1c3eec4fd711458357a911077341ab42c1e12
-EBUILD palaver-0.6.ebuild 1261 SHA256 0e86984b6cc9bf0bee3fd3acc9c86212ff78d7660469d4b76880bd47396e69d9 SHA512 bc5dee14584185fd6d53c51bc96ca89fbce5a73eb9efcb4c9a977de5e6517225acd589f5605c0c5d05043ee5aa53c64ef8574f7f8422f6a490f255f53c8d8062 WHIRLPOOL e48b2fe259b487001550bad86c427f381fc72a13622deaf8f1c6cd22cf02c18596d88c7ad8c4250a2edecf45f03e7cf748ddaa7d92a7b3ef0abe34a21cb64c2a
-EBUILD palaver-9999.ebuild 1235 SHA256 e32f4dc21ee790030ac2780e851e50953a5fead963f20c61639f9728b7969f8d SHA512 e1ba23d1aeb244b09308bb2c851f50e625f9ea633b525598acccbc04d697406006a20ba88a037b3e485c753b05bde80b735b3bf5d2cff780e054ae980ca35159 WHIRLPOOL 3f8753e86e1247445b55683bce0d04943a1f7af87c5b5b8d94653d371b952638fa17ef401bf8eb77cffd11717a848eaba026eac99f346424b488f0f4b5a1118e
-MISC ChangeLog 82 SHA256 12ed3543adc88564630b15553233b47b2bf04f4acc8f97eeb5c5befa2c16c75b SHA512 bf31a0cd9c7f4c2b560ef6cd2174e927933d1004c8fab2089e1d0d8c8d76f26f449f9babd33b72176038868259296cd4dda9db0b9cb175274e98fff888290703 WHIRLPOOL f7606de1e805cc293c25b9538e2fd7433ed4cd076bf7e047d7583e4e3886de1a365fe6b1e75bbcbd80f8d4da4a74ec3259d9914462a80ac75e9537dca5c9e52f
+EBUILD palaver-0.6.ebuild 1263 SHA256 b605c261021a232269fa4f961a4b16383f76dd7fcfbb7500954499e1220d88ea SHA512 d7b84a28bcd24a73907789d86f153fe737aa4734d7916f51313f3d7579776853de3347432a7f9264bc8ae3e4130e7742b5a86e3c79c86d39781814162b4b78f2 WHIRLPOOL 7b920882044aaed749fb2cb528a5a575e43382c0c532a388e9a9cb1c7e8135184bd20185adbfb79674c72eaa021e937602b02c16f19918a78c417dd041877151
+EBUILD palaver-9999.ebuild 1239 SHA256 830e598850f2b52e20ec97b3f24f9da95cd3c9146b123137f2947c2d9029fa6d SHA512 d212e43200e60052e0d263b0b2e36b7a152f7e92789f3cbda5ee988a110740af2608ef85e332bd010dfecc8a27bd77af237bffa9267b99a1bae532f5644b182c WHIRLPOOL b5a3d00c2e9d64ae42d71ed40d76812ef5e7cb7302668b5816c878041788fda888966dd7ffba8e4b892f59b400dbc59ce59ea95adae4a01c093c216a876dd4e7
+MISC ChangeLog 215 SHA256 e6ce88d57a52177c4e281cfab556942422b2bb4f3c33dffcf1e17560b40f5946 SHA512 26ee46e7ddb80def12e64728d4810fb7f00eb957c7c1b14d1b766a91290dcf1df5e1b29d80b4c9a5723832b15918f60145607bb5927dff2fd87f29de98bb007a WHIRLPOOL 7c1b94b92e8a614fea5b114d2290ae689d99ef9efc5bc6c0e075bce372b693f8d5c5971cb5aaf32b37e8031048fdd53ccd14abee540aa091d0b99084e9762ca9
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
