@@ -1,11 +1,12 @@
-# Copyright 1999-2015 Gentoo Foundation
+# Copyright 1999-2016 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Id$
 
-EAPI=5
+EAPI="6"
 PYTHON_COMPAT=( python2_7 )
 
-inherit distutils-r1 eutils python-r1 git-2
+inherit distutils-r1 eutils python-r1 git-r3
+
 DESCRIPTION="Multi-user chat component for jabber implemented in python"
 HOMEPAGE="https://github.com/fritteli/palaver"
 EGIT_REPO_URI="git://github.com/fritteli/palaver"
